--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../Public/css/style.css"/>
+        <link rel="stylesheet" href="../Public/css/style.css" />
         <title>start voyage</title>
     </head>
     <body>
@@ -11,7 +11,7 @@
             <nav class="principalNav">
                 <ul class="menu">
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="peliculas.html">Películas</a></li>
+                    <li><a href="peliculas/peliculas.html">Películas</a></li>
                     <li><a href="series.html">Series</a></li>
                     <li>
                         <a href="#">Géneros</a>
@@ -31,13 +31,11 @@
                 alt="loupe"
             />
 
-            <figure>
-                <img
-                    id="logo"
-                    src="../Public/contenido/img/Logos/logoEmpresa.png"
-                    alt="logo"
-                />
-            </figure>
+            <img
+                id="logo"
+                src="../Public/contenido/img/Logos/logoEmpresa.png"
+                alt="logo"
+            />
         </header>
         <section class="slider">
             <div class="slider-container">
@@ -91,7 +89,10 @@
                             />
                             <div class="trans">
                                 <h3>Una Pareja Explosiva</h3>
-                                <p> El este y el oeste se encuentran nuevamente cuando el asesinato del embajador Ha provoca la reunión de Lee y Carter.
+                                <p>
+                                    El este y el oeste se encuentran nuevamente
+                                    cuando el asesinato del embajador Ha provoca
+                                    la reunión de Lee y Carter.
                                 </p>
                                 <div class="botones">
                                     <button class="ver">Ver</button>
@@ -108,7 +109,10 @@
                             />
                             <div class="trans">
                                 <h3>Ted</h3>
-                                <p> Cuando John Bennett era un niño pequeño, pidió el deseo de que Ted, su querido oso de peluche, cobrara vida.
+                                <p>
+                                    Cuando John Bennett era un niño pequeño,
+                                    pidió el deseo de que Ted, su querido oso de
+                                    peluche, cobrara vida.
                                 </p>
                                 <div class="botones">
                                     <button class="ver">Ver</button>
@@ -125,7 +129,14 @@
                             />
                             <div class="trans">
                                 <h3>Guardianes de la Bahia</h3>
-                                <p> Dos socorristas, el veterano Mitch Buchannon y el joven y arrogante Matt Brody, deben detener a unos criminales que amenazan el futuro de la bahía en la que trabajan. Mientras colaboran aprenderán a respetarse mutuamente, dado que el comienzo de su relación profesional ha sido complicado
+                                <p>
+                                    Dos socorristas, el veterano Mitch Buchannon
+                                    y el joven y arrogante Matt Brody, deben
+                                    detener a unos criminales que amenazan el
+                                    futuro de la bahía en la que trabajan.
+                                    Mientras colaboran aprenderán a respetarse
+                                    mutuamente, dado que el comienzo de su
+                                    relación profesional ha sido complicado
                                 </p>
                                 <div class="botones">
                                     <button class="ver">Ver</button>
@@ -142,7 +153,14 @@
                             />
                             <div class="trans">
                                 <h3>Bad Boys Para Siempre</h3>
-                                <p> Los veteranos agentes Mike Lowery y Marcus Burnett vuelven a colaborar para detener a Armando Armas, el violento líder de un cartel de la droga afincado en Miami. En esta ocasión, los apoya el equipo AMMO, un grupo de élite del Departamento de Policía de Miami.
+                                <p>
+                                    Los veteranos agentes Mike Lowery y Marcus
+                                    Burnett vuelven a colaborar para detener a
+                                    Armando Armas, el violento líder de un
+                                    cartel de la droga afincado en Miami. En
+                                    esta ocasión, los apoya el equipo AMMO, un
+                                    grupo de élite del Departamento de Policía
+                                    de Miami.
                                 </p>
                                 <div class="botones">
                                     <button class="ver">Ver</button>
@@ -159,7 +177,12 @@
                             />
                             <div class="trans">
                                 <h3>Ride Along</h3>
-                                <p> Cuando un policía veterano pone a prueba a su futuro cuñado, un recluta dispuesto a demostrar que es más que un adicto a los videojuegos, ambos deben enfrentar al criminal más peligroso de Atlanta.
+                                <p>
+                                    Cuando un policía veterano pone a prueba a
+                                    su futuro cuñado, un recluta dispuesto a
+                                    demostrar que es más que un adicto a los
+                                    videojuegos, ambos deben enfrentar al
+                                    criminal más peligroso de Atlanta.
                                 </p>
                                 <div class="botones">
                                     <button class="ver">Ver</button>
@@ -185,10 +208,9 @@
                 </section>
             </div>
         </div>
+
         <footer>
-            <article>
-                <p>&copy CODE_DRAGON</p>
-            </article>
+            <h2>&copy CODE_DRAGON</h2>
             <figure class="redes">
                 <img class="red" src="/Public/contenido/img/Logos/facebook.png" alt="facebook">
                 <img class="red" src="/Public/contenido/img/Logos/instagram.png" alt="instagram">
