--- a/views/peliculas/peliculas.html
+++ b/views/peliculas/peliculas.html
@@ -3,16 +3,16 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../Public/css/style.css" />
+        <link rel="stylesheet" href="../../Public/css/style.css" />
         <title>start voyage</title>
     </head>
     <body>
         <header>
             <nav class="principalNav">
                 <ul class="menu">
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
                     <li><a href="peliculas.html">Películas</a></li>
-                    <li><a href="series.html">Series</a></li>
+                    <li><a href="../series.html">Series</a></li>
                     <li>
                         <a href="#">Géneros</a>
                         <ul class="submenu">
@@ -28,17 +28,17 @@
 
             <img
                 id="loupe"
-                src="../Public/contenido/img/Logos/loupe.png"
+                src="../../Public/contenido/img/Logos/loupe.png"
                 alt="loupe"
             />
 
-            <figure>
+
                 <img
                     id="logo"
-                    src="../Public/contenido/img/Logos/logoEmpresa.png"
+                    src="../../Public/contenido/img/Logos/logoEmpresa.png"
                     alt="logo"
                 />
-            </figure>
+
         </header>
         <div class="container" id="drama">
             <div class="scroll-images">
@@ -56,7 +56,7 @@
                         >
                             <img
                                 class="iconoi"
-                                src="../Public/contenido/img/Main/flechaIzquierda.png"
+                                src="../../Public/contenido/img/Main/flechaIzquierda.png"
                                 alt=""
                             />
                         </button>
@@ -64,41 +64,54 @@
                     <div class="pelis" id="imageDramaContainer">
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/TheWhale.jpg"
+                                src="../../Public/contenido/img/Peliculas/TheWhale.jpg"
                                 alt=""
                             />
                             <div class="trans">
                                 <h3>the whale</h3>
                                 <p> Un profesor de inglés, un tipo solitario que sufre obesidad mórbida, intenta restablecer el contacto con su hija en busca de perdón
                                 </p>
-                                <div class="botones">
-                                    <button class="ver">Ver</button>
-                                    <button class="verTrailer">
-                                        Ver Trailer
-                                    </button>
+                                <div class="modalPrincipal">
+                                    <div class="botones">
+                                        <button class="ver">Ver</button>
+                                        <button class="verTrailer">
+                                            Ver Trailer
+                                        </button>
+                                        <div class="video-container">
+                                            <span class="close">X</span>
+                                            <video src="../../Public/contenido/trailers/Peliculas/theWhale.mp4" controls></video>
+                                        </div>
+                                    </div>
                                 </div>
+                                
                             </div>
                         </figure>
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/TheBoyInTheStripedPyjamas.jpg"
+                                src="../../Public/contenido/img/Peliculas/TheBoyInTheStripedPyjamas.jpg"
                                 alt=""
                             />
                             <div class="trans">
                                 <h3>El Niño de la Pijama de Rayas</h3>
                                 <p> Durante la Segunda Guerra Mundial, el pequeño hijo de un comandante de un campo de concentración desarrolla una amistad prohibida con un niño judío de 8 años.
                                 </p>
-                                <div class="botones">
-                                    <button class="ver">Ver</button>
-                                    <button class="verTrailer">
-                                        Ver Trailer
-                                    </button>
+                                <div class="modalPrincipal">
+                                    <div class="botones">
+                                        <button class="ver">Ver</button>
+                                        <button class="verTrailer">
+                                            Ver Trailer
+                                        </button>
+                                        <div class="video-container">
+                                            <span class="close">X</span>
+                                            <video src="../../Public/contenido/trailers/Peliculas/theWhale.mp4" controls></video>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </figure>
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/TheFaultInOurStars.jpg"
+                                src="../../Public/contenido/img/Peliculas/TheFaultInOurStars.jpg"
                                 alt=""
                             />
                             <div class="trans">
@@ -115,7 +128,7 @@
                         </figure>
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/Joker.jpg"
+                                src="../../Public/contenido/img/Peliculas/Joker.jpg"
                                 alt=""
                             />
                             <div class="trans">
@@ -132,7 +145,7 @@
                         </figure>
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/TheGambler.jpg"
+                                src="../../Public/contenido/img/Peliculas/TheGambler.jpg"
                                 alt=""
                             />
                             <div class="trans">
@@ -155,7 +168,7 @@
                         >
                             <img
                                 class="iconoi"
-                                src="../Public/contenido/img/Main/fechaDerecha.png"
+                                src="../../Public/contenido/img/Main/fechaDerecha.png"
                                 alt=""
                             />
                         </button>
@@ -179,7 +192,7 @@
                         >
                             <img
                                 class="iconoi"
-                                src="../Public/contenido/img/Main/flechaIzquierda.png"
+                                src="../../Public/contenido/img/Main/flechaIzquierda.png"
                                 alt=""
                             />
                         </button>
@@ -187,7 +200,7 @@
                     <div class="pelis" id="imageDramaContainer">
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/RushHour3.jpg"
+                                src="../../Public/contenido/img/Peliculas/RushHour3.jpg"
                                 alt=""
                             />
                             <div class="trans">
@@ -204,7 +217,7 @@
                         </figure>
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/Ted.jpg"
+                                src="../../Public/contenido/img/Peliculas/Ted.jpg"
                                 alt=""
                             />
                             <div class="trans">
@@ -221,7 +234,7 @@
                         </figure>
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/Baywatch.jpg"
+                                src="../../Public/contenido/img/Peliculas/Baywatch.jpg"
                                 alt=""
                             />
                             <div class="trans">
@@ -238,7 +251,7 @@
                         </figure>
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/BadBoysForLife.jpg"
+                                src="../../Public/contenido/img/Peliculas/BadBoysForLife.jpg"
                                 alt=""
                             />
                             <div class="trans">
@@ -255,7 +268,7 @@
                         </figure>
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/RideAlong.jpg"
+                                src="../../Public/contenido/img/Peliculas/RideAlong.jpg"
                                 alt=""
                             />
                             <div class="trans">
@@ -278,7 +291,7 @@
                         >
                             <img
                                 class="iconoi"
-                                src="../Public/contenido/img/Main/fechaDerecha.png"
+                                src="../../Public/contenido/img/Main/fechaDerecha.png"
                                 alt=""
                             />
                         </button>
@@ -302,7 +315,7 @@
                         >
                             <img
                                 class="iconoi"
-                                src="../Public/contenido/img/Main/flechaIzquierda.png"
+                                src="../../Public/contenido/img/Main/flechaIzquierda.png"
                                 alt=""
                             />
                         </button>
@@ -310,7 +323,7 @@
                     <div class="pelis" id="imageDramaContainer">
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/Spiderman-IntoTheSpiderverse.jpg"
+                                src="../../Public/contenido/img/Peliculas/Spiderman-IntoTheSpiderverse.jpg"
                                 alt=""
                             />
                             <div class="trans">
@@ -327,7 +340,7 @@
                         </figure>
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/PussInBoots-TheLastWish.jpg"
+                                src="../../Public/contenido/img/Peliculas/PussInBoots-TheLastWish.jpg"
                                 alt=""
                             />
                             <div class="trans">
@@ -344,7 +357,7 @@
                         </figure>
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/Spiderman-AcrossTheSpiderverse.jpg"
+                                src="../../Public/contenido/img/Peliculas/Spiderman-AcrossTheSpiderverse.jpg"
                                 alt=""
                             />
                             <div class="trans">
@@ -361,7 +374,7 @@
                         </figure>
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/Encanto.jpg"
+                                src="../../Public/contenido/img/Peliculas/Encanto.jpg"
                                 alt=""
                             />
                             <div class="trans">
@@ -378,7 +391,7 @@
                         </figure>
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/Shrek.jpg"
+                                src="../../Public/contenido/img/Peliculas/Shrek.jpg"
                                 alt=""
                             />
                             <div class="trans">
@@ -401,7 +414,7 @@
                         >
                             <img
                                 class="iconoi"
-                                src="../Public/contenido/img/Main/fechaDerecha.png"
+                                src="../../Public/contenido/img/Main/fechaDerecha.png"
                                 alt=""
                             />
                         </button>
@@ -418,11 +431,10 @@
         </div>
         
         
+        
 
         <footer>
-            <article>
-                <p>&copy CODE_DRAGON</p>
-            </article>
+            <h2>&copy CODE_DRAGON</h2>
             <figure class="redes">
                 <img class="red" src="/Public/contenido/img/Logos/facebook.png" alt="facebook">
                 <img class="red" src="/Public/contenido/img/Logos/instagram.png" alt="instagram">
@@ -431,5 +443,6 @@
         </footer>
     </body>
 </html>
-<script src="../Public/js/scroll.js"></script>
-<script src="../Public/js/buscador.js"></script>
+<script src="../../Public/js/scroll.js"></script>
+<script src="../../Public/js/buscador.js"></script>
+<script src="../../Public/js/modal.js"></script>
