--- a/views/series.html
+++ b/views/series.html
@@ -11,7 +11,7 @@
             <nav class="principalNav">
                 <ul class="menu">
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="peliculas.html">Películas</a></li>
+                    <li><a href="../views/peliculas/peliculas.html">Películas</a></li>
                     <li><a href="series.html">Series</a></li>
                     <li>
                         <a href="#">Géneros</a>
@@ -120,6 +120,23 @@
                             <div class="trans">
                                 <h3>The Good Doctor</h3>
                                 <p> es una serie de televisión médica estadounidense que sigue la historia del Dr. Shaun Murphy, un joven y talentoso cirujano con autismo y síndrome del sabio. A pesar de sus desafíos sociales y emocionales, Shaun se une a un prestigioso equipo quirúrgico en el Hospital San José St. Bonaventure.
+                                </p>
+                                <div class="botones">
+                                    <button class="ver">Ver</button>
+                                    <button class="verTrailer">
+                                        Ver Trailer
+                                    </button>
+                                </div>
+                            </div>
+                        </figure>
+                        <figure class="imageDrama">
+                            <img
+                                src="../Public/contenido/img/Series/BlueBloods.jpg"
+                                alt=""
+                            />
+                            <div class="trans">
+                                <h3>Blue Boods</h3>
+                                <p> es una serie de televisión estadounidense que combina elementos de drama policial y familiar. La historia sigue a la familia Reagan, una dinastía de agentes del orden público en Nueva York. El patriarca, Frank Reagan, es el jefe de policía y guía a sus hijos, Danny, Erin, Jamie y Joe, en sus carreras dentro del departamento de policía y la fiscalía.
                                 </p>
                                 <div class="botones">
                                     <button class="ver">Ver</button>
@@ -402,15 +419,12 @@
                 <div id="modalContent" class="modal-columns"></div>
             </div>
         </div>
-
         <footer>
-            <article>
-                <p>&copy CODE_DRAGON</p>
-            </article>
+            <h2>&copy CODE_DRAGON</h2>
             <figure class="redes">
-                <img class="red" src="../Public/contenido/img/Logos/facebook.png" alt="facebook">
-                <img class="red" src="../Public/contenido/img/Logos/instagram.png" alt="instagram">
-                <img class="red" src="../Public/contenido/img/Logos/twitter.png" alt="twitter">
+                <img class="red" src="/Public/contenido/img/Logos/facebook.png" alt="facebook">
+                <img class="red" src="/Public/contenido/img/Logos/instagram.png" alt="instagram">
+                <img class="red" src="/Public/contenido/img/Logos/twitter.png" alt="twitter">
             </figure>
         </footer>
     </body>
