--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -89,25 +89,84 @@ header {
     
 }
 
-@media (max-width:1036px) {
+
+
+@media screen and (max-width:767px) {
     header {
-        flex-direction: column-reverse;
-        height: 200px;
+        height: auto;
+        display: grid;
+        padding: 0;
+        margin: 0;
+        width: 100%;
+        place-content: center;
+        place-items: center;
+    }
+    .menu {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
     }
 
-    .principalNav {
-        width: 50%;
-        text-align: center;
+    .menu li {
+        width: 25%;
+    }
+
+    .menu li a {
+        margin: 0;
+        padding: 0;
     }
 
     .submenu {
-        text-align: left;
+        display: grid;
+        grid-template-rows: repeat(3,30%);
+        width: 150%;;
     }
+
+    .submenu li {
+        width: 100%;
+        padding: 5px;
+    }
+
+    #buscador {
+        width: 80%;
+    }
+
+    #loupe {
+        display: none;
+    }
+
+    #logo {
+        width: 40%;
+        height: 100%;
+        margin: 0 auto;
+    }
+
+
+
 }
 
-@media (max-width:470px) {
+@media screen and (min-width: 767px) and (max-width:1023px) {
     header {
-        height: 300px;
+        margin: 0;
+        padding: 0;
+        display: grid;
+        height: auto;
+    }
+
+    #buscador {
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    #loupe {
+        display: none;
+    }
+
+    #logo {
+        width: 40%;
+        height: 70%;
+        margin: 0 auto;
     }
 }
 
@@ -180,6 +239,7 @@ header {
 .imageDrama img {
     width: 100%;
     height: 100%;
+    padding: 20px;
     border-radius: 2%;
 }
 
@@ -224,13 +284,13 @@ header {
 .trans{
     display: none;
     position: absolute;
-    top: 0px;
-    left: 0px;
-    bottom: 0%;
-    right: 0px;
+    top: 20px;
+    left: 20px;
+    bottom: 20px;
+    right: 20px;
     background: rgba(0, 0, 0, 0.6);
     text-align: center;
-    padding: 18px;
+    padding: 20px;
     font: 15px/25px verdana;
     color: white;
     flex-direction: column;
@@ -266,6 +326,49 @@ header {
     background-color: orange;
     cursor: pointer;
 }
+/*MJodal trailer*/
+
+.video-container{
+    position: fixed;
+    top: 16%;
+    left: 10%;
+    width: 80%;
+    height: 80%;
+    z-index: 999;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s;
+}
+.video-container .close{
+    position: absolute;
+    top: 1%;
+    right: 10px;
+    font-size: 30px;
+    cursor: pointer;
+    color: #ffff;
+}
+.video-container video{
+    width: 100%;
+    min-width: 800px;
+    transform: scale(0);
+    box-shadow: 0 20px 20px rgba(0,0,0, 0.2);
+    outline: none;
+    transition: all 0.3;
+}
+.video-container.show{
+    pointer-events: all;
+    opacity: 1;
+}
+.video-container.show video{
+    transform: scale(1);
+    width: 80%;
+    height: 100%;
+}
+
 iframe{
     width: 98.5vw;
     height: 130vh;
@@ -280,29 +383,21 @@ iframe{
     }
 }
 
-
 footer {
-    background-color: rgb(30, 30, 30);
+    background-color: #1E1E1E;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
     height: 60px;
-}
-
-footer p {
-    color: rgb(255, 255, 255);
-    padding:  10px 20px;
-    
-}
-
-.redes {
-    padding:  10px 20px;
+    flex-wrap: wrap;
+    color: #ffff;
 }
 
 .red {
     width: auto;
     height: 40px;
     padding: 0 5px;
+    filter: invert(100%);
 }
 
 @media (max-width:480px) {
@@ -326,17 +421,17 @@ footer p {
 }
 
 .modal-content {
-    position: absolute;
-    top: 50%;
+    position: fixed;
+    top: 55%;
     left: 50%;
     transform: translate(-50%, -50%);
-    max-width: 90%;
-    max-height: 90%;
+    max-width: 95%;
+    max-height: 87%;
     overflow: auto;
-    background-color: #fff;
-    padding: 20px;
+    background-color: rgba(255, 255, 255, 0.763);
+    padding: 0px;
     margin: 20px;
-    border-radius: 5px;
+    border-radius: 2%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -352,8 +447,9 @@ footer p {
 .modal-columns {
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     margin: 20px;
+    align-items: center;
 }
 
 .modal-imageDrama {
@@ -361,3 +457,19 @@ footer p {
     margin-bottom: 20px;
     position: relative;
 }
+.modal-columns .imageDrama:hover .trans h3,p{
+    display: none;
+}
+
+/* .modal-columns .imageDrama:hover .botones  {
+    display: grid;
+    grid-template-rows: repeat(2,50%);
+    place-items: center;
+    place-content: center;
+    gap: 10px;
+}
+.modal-columns .imageDrama:hover .botones button {
+    width: 100%;
+    height: 100%;
+} */
+
