--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -352,7 +352,7 @@ footer p {
 .modal-columns {
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     margin: 20px;
 }
 
