--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -137,9 +137,7 @@ header {
     }
 
     #logo {
-        width: 40%;
-        height: 100%;
-        margin: 0 auto;
+        display: none;
     }
 
 
