--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -162,9 +162,7 @@ header {
     }
 
     #logo {
-        width: 40%;
-        height: 70%;
-        margin: 0 auto;
+        display: none;
     }
 }
 
