--- a/views/peliculas/peliculas.html
+++ b/views/peliculas/peliculas.html
@@ -10,7 +10,7 @@
         <header>
             <nav class="principalNav">
                 <ul class="menu">
-                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../../index.html">Inicio</a></li>
                     <li><a href="peliculas.html">Películas</a></li>
                     <li><a href="../series.html">Series</a></li>
                     <li>
