--- a/views/peliculas/peliculas.html
+++ b/views/peliculas/peliculas.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../../Public/css/style.css" />
+        <link rel="shortcut icon" href="Public/contenido/img/Logos/logoEmpresa.png" type="image/x-icon">
         <title>start voyage</title>
     </head>
     <body>
