--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -459,13 +459,14 @@ footer {
 
 @media screen and (max-width: 767px) {
     .modal {
-        width: 100vw;
-        height: 100vh;
+        width: 80vw;
+        height: 80vh;
     }
 
     .modal-content {
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
+        margin: 20px 0;
     }
 
     .imageDrama {
