slider funcional sin responsive

--- a/views/peliculas/peliculas.html
+++ b/views/peliculas/peliculas.html
@@ -51,15 +51,8 @@
 
                 <section class="genero">
                     <div class="btnFlecha flechaIzquierda">
-                        <button
-                            class="iconob flechabtn"
-                            onclick="scrollIzquierda()"
-                        >
-                            <img
-                                class="iconoi"
-                                src="../../Public/contenido/img/Main/flechaIzquierda.png"
-                                alt=""
-                            />
+                        <button class="iconob flechabtn" onclick="scrollIzquierdaDrama()">
+                            <img class="iconoi" src="../../Public/contenido/img/Main/flechaIzquierda.png" alt="" />
                         </button>
                     </div>
                     <div class="pelis" id="imageDramaContainer">
@@ -163,15 +156,8 @@
                         </figure>
                     </div>
                     <div class="btnFlecha flechaDerecha">
-                        <button
-                            class="iconob flechabtn"
-                            onclick="scrollDerecha()"
-                        >
-                            <img
-                                class="iconoi"
-                                src="../../Public/contenido/img/Main/fechaDerecha.png"
-                                alt=""
-                            />
+                        <button class="iconob flechabtn" onclick="scrollDerechaDrama()">
+                            <img class="iconoi" src="../../Public/contenido/img/Main/fechaDerecha.png" alt="" />
                         </button>
                     </div>
                 </section>
@@ -187,18 +173,11 @@
 
                 <section class="genero">
                     <div class="btnFlecha flechaIzquierda">
-                        <button
-                            class="iconob flechabtn"
-                            onclick="scrollIzquierda()"
-                        >
-                            <img
-                                class="iconoi"
-                                src="../../Public/contenido/img/Main/flechaIzquierda.png"
-                                alt=""
-                            />
+                        <button class="iconob flechabtn" onclick="scrollIzquierdaComedia()">
+                            <img class="iconoi" src="../../Public/contenido/img/Main/flechaIzquierda.png" alt="" />
                         </button>
                     </div>
-                    <div class="pelis" id="imageDramaContainer">
+                    <div class="pelis" id="imageComediaContainer">
                         <figure class="imageDrama">
                             <img
                                 src="../../Public/contenido/img/Peliculas/RushHour3.jpg"
@@ -286,15 +265,8 @@
                         </figure>
                     </div>
                     <div class="btnFlecha flechaDerecha">
-                        <button
-                            class="iconob flechabtn"
-                            onclick="scrollDerecha()"
-                        >
-                            <img
-                                class="iconoi"
-                                src="../../Public/contenido/img/Main/fechaDerecha.png"
-                                alt=""
-                            />
+                        <button class="iconob flechabtn" onclick="scrollDerechaComedia()">
+                            <img class="iconoi" src="../../Public/contenido/img/Main/fechaDerecha.png" alt="" />
                         </button>
                     </div>
                 </section>
@@ -310,18 +282,11 @@
 
                 <section class="genero">
                     <div class="btnFlecha flechaIzquierda">
-                        <button
-                            class="iconob flechabtn"
-                            onclick="scrollIzquierda()"
-                        >
-                            <img
-                                class="iconoi"
-                                src="../../Public/contenido/img/Main/flechaIzquierda.png"
-                                alt=""
-                            />
+                        <button class="iconob flechabtn" onclick="scrollIzquierdaAnimacion()">
+                            <img class="iconoi" src="../../Public/contenido/img/Main/flechaIzquierda.png" alt="" />
                         </button>
                     </div>
-                    <div class="pelis" id="imageDramaContainer">
+                    <div class="pelis" id="imageAnimacionContainer">
                         <figure class="imageDrama">
                             <img
                                 src="../../Public/contenido/img/Peliculas/Spiderman-IntoTheSpiderverse.jpg"
@@ -409,15 +374,8 @@
                         </figure>
                     </div>
                     <div class="btnFlecha flechaDerecha">
-                        <button
-                            class="iconob flechabtn"
-                            onclick="scrollDerecha()"
-                        >
-                            <img
-                                class="iconoi"
-                                src="../../Public/contenido/img/Main/fechaDerecha.png"
-                                alt=""
-                            />
+                        <button class="iconob flechabtn" onclick="scrollDerechaAnimacion()">
+                            <img class="iconoi" src="../../Public/contenido/img/Main/fechaDerecha.png" alt="" />
                         </button>
                     </div>
                 </section>
